# mr_pdf

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  box_demo.rs  chart_advanced.rs  chart_draw_demo.rs  comprehensive.rs  flutter_layout.rs  font.rs  gradient_showcase.rs  hyperlink_demo.rs  image_example.rs  invoice.rs  layout.rs  markdown_demo.rs  memory_render.rs  multi_table_demo.rs  page_numbering.rs  paper_size.rs  premium_features.rs  premium_features_demo.rs  repro_issue.rs  rich_text_demo.rs  security_demo.rs  streaming_table.rs  svg_rendering.rs  table.rs  table_image.rs  table_logbook.rs  table_percent.rs  table_streaming.rs  table_styled.rs  table_styled_demo.rs  text_margin.rs
src/: lib.rs
src/chart/: chart.rs  mod.rs
src/draw/: mod.rs
src/font/: embed.rs  font.rs  mod.rs
src/image/: mod.rs  xobject.rs
src/layout/: box_layout.rs  cursor.rs  flex.rs  markdown.rs  mod.rs  multiplexed.rs  paragraph.rs  table.rs  text.rs
src/pdf/: crypto.rs  mod.rs  objects.rs  writer.rs  xref.rs
src/svg/: mod.rs  parser.rs  renderer.rs
