[package]
name = "mr_pdf"
version = "0.1.1"
edition = "2024"
authors = ["Supaat Wisetsud <supaat.wi@gmail.com>"]
description = "A lightweight, high-performance PDF generation library for Rust with premium layouts and charts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/supaatwi/mr_pdf"
homepage = "https://github.com/supaatwi/mr_pdf"
documentation = "https://github.com/supaatwi/mr_pdf/blob/main/README.md"
keywords = ["pdf", "generator", "report", "chart", "table"]
categories = ["rendering", "graphics"]
readme = "README.md"

[dependencies]
flate2 = "1.1.9"
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
roxmltree = "0.21.1"
ttf-parser = "0.25.1"
base64 = "0.22"

[features]
default = ["chart"]
chart = []
