[package]
name = "mr_pdf"
version = "0.1.6"
edition = "2024"
authors = ["Supaat Wisetsud <supaat.wi@gmail.com>"]
description = "A lightweight, high-performance PDF generation library for Rust with premium layouts and charts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/supaatwi/mr_pdf"
homepage = "https://github.com/supaatwi/mr_pdf"
documentation = "https://github.com/supaatwi/mr_pdf/blob/main/README.md"
keywords = ["pdf", "generator", "chart", "table", "markdown"]
categories = ["rendering", "graphics"]
readme = "README.md"

[dependencies]
flate2 = "1.1.9"
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
] }
roxmltree = "0.21.1"
ttf-parser = "0.25.1"
base64 = "0.22"
pulldown-cmark = "0.13.1"
fontcull = { version = "2.0.1", default-features = false }
rc4 = "0.1.0"
md5 = "0.8.0"
fast_qr = { version = "0.13.1", optional = true }

[features]
default = ["chart"]
chart = []
qrcode = ["dep:fast_qr"]
